syntax = "proto3";
package volumefi.cronchain.concensus;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "concensus/params.proto";
import "google/protobuf/any.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/volumefi/cronchain/x/concensus/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/volumefi/cronchain/concensus/params";
  }
  // Queries a list of QueuedMessagesForSigning items.
	rpc QueuedMessagesForSigning(QueryQueuedMessagesForSigningRequest) returns (QueryQueuedMessagesForSigningResponse) {
		option (google.api.http).get = "/volumefi/cronchain/concensus/queued_messages_for_signing";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryQueuedMessagesForSigningRequest {
  string valAddress = 1;
  string queueTypeName = 2;
}

message QueryQueuedMessagesForSigningResponse {
  repeated MessageToSign messageToSign = 1;
}

message MessageToSign {
  bytes nonce = 1;
  uint64 id = 2;
  google.protobuf.Any msg = 3;
}

// this line is used by starport scaffolding # 3
